<resources>
    <string name="app_name">Blackjack Firebase</string>
    <string name="login_title">Choose user</string>
    <string name="login_btn">New user</string>
    <string name="user_name">Username</string>
    <string name="user_points">Points</string>
    <string name="points_hint">Player points</string>
    <string name="player_sum">Player sum</string>
    <string name="dealer_sum">Dealer sum</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="new_user_title">New user</string>
    <string name="edit_username">Enter username</string>
    <string name="create_user">Create user</string>
    <string name="back">Back</string>
    <string name="AH">Ace of Hearts</string>
    <string name="KH">King of Hearts</string>
    <string name="card_image">Card image</string>


</resources>