<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/txtSignInTitle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_title"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignIn"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/imageViewSignInAce"
        android:layout_width="100dp"
        android:layout_height="139dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/AH"/>

    <ImageView
        android:id="@+id/imageViewSignInKing"
        android:layout_width="100dp"
        android:layout_height="139dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewSignInAce"
        app:layout_constraintStart_toStartOf="@+id/imageViewSignInAce"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignInAce"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/KH"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignIn"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/txtAppTitleSignIn"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>