<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/txtTotalPoints"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/points_hint"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDealerHandTop"
        app:layout_constraintEnd_toStartOf="@+id/guidelineHandRightEdge"
        app:layout_constraintStart_toStartOf="@+id/guidelineHandLeftEdge"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDealerHand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDealerHandBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineHandRightEdge"
        app:layout_constraintStart_toEndOf="@+id/guidelineHandLeftEdge"
        app:layout_constraintTop_toBottomOf="@+id/guidelineDealerHandTop" />

    <LinearLayout
        android:id="@+id/linearSumPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recyclerPlayerHand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerDealerHand">

        <RelativeLayout
            android:id="@+id/relativePlayerSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp">

            <TextView
                android:id="@+id/txtPlayerSumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/player_sum"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlayerSumSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPlayerSumTitle"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeDealerSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDealerSumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/dealer_sum"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDealerSumSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDealerSumTitle"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPlayerHand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelinePlayerHandBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineHandRightEdge"
        app:layout_constraintStart_toEndOf="@+id/guidelineHandLeftEdge"
        app:layout_constraintTop_toBottomOf="@+id/guidelinePlayerHandTop" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:enabled="false"
        android:text="@string/btn_start"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalMiddle"
        app:layout_constraintStart_toEndOf="@+id/guidelineHandLeftEdge"
        app:layout_constraintTop_toTopOf="@+id/guidelinePlayerHandBottom"
        />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:enabled="false"
        android:text="@string/btn_stop"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineHandRightEdge"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalMiddle"
        app:layout_constraintTop_toTopOf="@+id/guidelinePlayerHandBottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDealerHandTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDealerHandBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePlayerHandTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5403557" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePlayerHandBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHandLeftEdge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHandRightEdge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>